kube/org0/org0-ca.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: org0-ca
spec:
  replicas: 1
  selector:
    matchLabels:
      app: org0-ca
  template:
    metadata:
      labels:
        app: org0-ca
    spec:
      containers:
      - name: main
        image: ${FABRIC_CONTAINER_REGISTRY}/fabric-ca:${FABRIC_CA_VERSION}
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 443
        volumeMounts:
        - name: fabric-volume
          mountPath: /var/hyperledger
        - name: fabric-config
          mountPath: /var/hyperledger/fabric-ca-server/fabric-ca-server-config.yaml
          subPath: fabric-ca-server-config.yaml
        - name: tls-cert-volume
          mountPath: /var/hyperledger/fabric/config/tls
          readOnly: true
        readinessProbe:
          tcpSocket:
            port: 443
          initialDelaySeconds: 2
          periodSeconds: 5
      volumes:
      - name: fabric-volume
        persistentVolumeClaim:
          claimName: fabric-org0
      - name: fabric-config
        configMap:
          name: org0-config
      - name: tls-cert-volume
        secret:
          secretName: org0-ca-tls-cert

---
apiVersion: v1
kind: Service
metadata:
  name: org0-ca
spec:
  ports:
  - name: https
    port: 443
    protocol: TCP
  selector:
    app: org0-ca

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-connect-timeout: 60s
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
  labels:
    app: org0-ca
  name: org0-ca
spec:
  ingressClassName: nginx
  rules:
  - host: org0-ca.${DOMAIN}
    http:
      paths:
      - backend:
          service:
            name: org0-ca
            port:
              name: https
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - org0-ca.${DOMAIN}
